--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,10 +17,10 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Log in to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-        with:
-          region: ap-south-1
+        run: |
+          aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 637423491174.dkr.ecr.ap-south-1.amazonaws.com
+        env:
+          AWS_REGION: ap-south-1
 
       - name: Build, tag, and push image to Amazon ECR
         env:
